# aiforge

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt
aiforge/: __init__.py
aiforge/agents/: __init__.py  agent.py  communication.py  crew.py  planner.py  registry.py  roles.py  templates.py
aiforge/api/: __init__.py  server.py
aiforge/cli/: __init__.py  __main__.py  main.py
aiforge/config/: __init__.py  settings.py
aiforge/core/: __init__.py  context.py  engine.py  errors.py  monitoring.py  pricing.py  retry.py  safe_eval.py  schema.py  security.py  state.py  types.py
aiforge/dashboard/: __init__.py
aiforge/events/: __init__.py  bus.py
aiforge/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
aiforge/memory/: __init__.py  base.py  embeddings.py  manager.py  stores.py  vector.py
aiforge/plugins/: __init__.py  base.py
aiforge/providers/: __init__.py  anthropic_provider.py  base.py  (+3 more)
assets/: README.md
docs/: README.md  agents.md  api-reference.md  architecture.md  examples.md  getting-started.md  memory.md  plugins.md  sdk-reference.md  tools.md  workflows.md
examples/: 01_research_assistant.py  02_browser_agent.py  03_coding_agent.py  04_file_assistant.py  05_document_analyst.py  06_customer_support_agent.py  07_meeting_assistant.py  08_cybersecurity_agent.py  09_data_analysis_agent.py  10_automation_agent.py  aiforge.config.json  workflow_example.json
tests/: conftest.py  test_agents.py  test_config.py  test_crew.py  test_events.py  test_memory.py  test_planner.py  test_plugins_and_api.py  test_providers.py  test_realness.py  test_security.py  test_state.py  test_storage.py  test_studio_api.py  test_tools.py  test_workflows.py
(+48 files in other folders)
